--- a/src/components/Body/MainBody/MainBody.css
+++ b/src/components/Body/MainBody/MainBody.css
@@ -159,7 +159,7 @@ color: #181414;
 
 .product_show_more_btn {
   cursor: pointer;
-  margin-top: 30px;
+  margin-top: 10px;
   width: 237px;
   height: 53px;
   background: #C60101;
@@ -327,7 +327,7 @@ border-radius: 500px;
 }
 
 .about_us {
-height: 518px;
+height: 538px;
 }
 
 .delivery {
@@ -365,4 +365,16 @@ display: flex;
 flex-direction: column;
 
 color: #181414;
+}
+
+hr {
+  width: 475px;
+height: 5px;
+left: 1035px;
+top: 2793px;
+
+/* ваы */
+
+background: linear-gradient(90deg, #C90000 0%, #620000 100.03%);
+border-radius: 10px;
 }
