Add  new functional and fixed bugs

--- a/src/components/Body/MainBody/MainBody.css
+++ b/src/components/Body/MainBody/MainBody.css
@@ -111,6 +111,7 @@ color: #181414;
   width: 100%;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 86px;
 }
 
 .product_card {
