--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,126 @@
-#root,html,body,.container {
+#root,html,body {
   width: 1920px;
-  min-height: 2700px;
 }
 
 .container {
   background: #E5E5E5;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 1920px;
+}
+
+.modal_background_container {
+  z-index: 1;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.644);
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s;
+}
+
+.modal_container {
+  background-color: white;
+  width: 805px;
+  height: 500px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  display: flex;
+  position: relative;
+  border-radius: 10px;
+}
+
+.header_and_form {
+  position: absolute;
+  margin-left: 41px;
+}
+
+.modal_ship_img {
+  position: absolute;
+  width: 389px;
+height: 461px;
+top: 40px;
+left: 417px;
+border-radius: 10px;
+}
+
+.modal_form {
+  display: flex;
+  flex-direction: column;
+  width: 354px;
+}
+
+.modal_text {
+  width: 305px;
+height: 69px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+}
+
+.modal_input {
+  padding-left: 20px;
+  width: 354px;
+height: 53px;
+
+background: #F9F9F9;
+border: 1px solid rgba(0, 0, 0, 0.1);
+border-radius: 10px;
+margin-bottom: 20px ;
+}
+
+.modal_button {
+  width: 354px;
+height: 53px;
+border: none;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+color: #F9F9F9;
+background: #C60101;
+border-radius: 10px;
+}
+
+.modal_button:hover {
+  cursor: pointer;
+  background: #970000;
+}
+
+.modal_button:active {
+  background: #630000;
+}
+
+.exit_cont {
+  display: flex;
+  justify-content: flex-end;
+  z-index: 1;
+  width: 100%;
+  height: 30px;
+}
+
+.modal_exit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border: none;
+  width: 15px;
+  margin-right: 10px;
+  margin-top: 10px;
+  font-size: 20px;
+  color: #A3A3A3;
+}
+
+.modal_exit {
+  cursor: pointer;
 }
