--- a/src/components/Body/ProductBody/ProductBody.css
+++ b/src/components/Body/ProductBody/ProductBody.css
@@ -1,15 +1,15 @@
 .product_body_container {
-  width: 1920px;
+  width: 100%;
 
   margin-top: 43px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
   align-items: center;
 }
 
 .product_dir {
-  width: 1200px;
+  width: 70%;
 height: 17.58px;
 left: 360px;
 top: 126.23px;
@@ -24,11 +24,11 @@ color: #A8A8A8;
 }
 
 h1 {
-  width: 1200px;
+  width: 70%;
 }
 
 .product_main_img {
-  width: 1200px;
+  width: 70%;
 height: 142px;
 border-radius: 20px;
 }
@@ -52,18 +52,18 @@ color: #181414;
 .pellets_and_briquettes_container {
   display: flex;
   justify-content: space-between;
-  width: 1200px;
+  width: 70%;
 }
 
 .pellets_container,.briquettes_container {
   display: flex;
   flex-direction: column;
-  width: 580px;
+  width: 50%;
 }
 
 
 .pellets,.briquettes {
-  width: 82px;
+  width: 40%;
   height: 29px;
   left: 360px;
   top: 389px;
