--- a/src/components/CallMeBack/CallMeBack.css
+++ b/src/components/CallMeBack/CallMeBack.css
@@ -1,44 +1,51 @@
 .callmeback_container {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   position: relative;
-  width: 1201px;
-  height: 401px;
+  flex-direction: column;
+  width: 70%;
+  height: 320px;
   margin-top: 60px;
   background-color: #FFFFFF;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   margin-bottom: 63px;
+  background-image: url('../../images/ship.jpg');
+  background-size: 53%;
+  background-repeat: no-repeat;
+  background-position-x: 100% ;
 }
 
-.callmeback_ship {
+/* .callmeback_ship {
   display: flex;
-  height: 401px;
+  height: 100%;
   border-radius: 10px;
-  width: 474px;
-}
+  width: 30%;
+} */
 
 .callmeback_text_container {
-  position: absolute;
   display: flex;
   flex-direction: column;
-  top: 64px;
-  left: 81px;
+  margin-left: 50px;
 }
 
 .callmeback_primary_text {
-  width: 626px;
-  height: 86px;
+  width: 80%;
+  height: 11vh;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 30px;
   line-height: 120%;
   color: #181414;
+  @media screen and (max-width:1024px) {
+    height: 100px;
+    font-size: 20px;
+  }
 }
 
 .callmeback_secondary_text {
-  width: 432px;
+  width: 60%;
   height: 38px;
   font-family: 'Poppins';
   font-style: normal;
@@ -52,48 +59,42 @@
 }
 
 .callmeback_inputs_and_button_container {
-  position: absolute;
-  top: 289px;
-  left: 81px;
   display: flex;
-  width: 900px;
-  justify-content: space-around;
+  width: 50%;
+  margin-left: 50px;
+  margin-top: 50px;
+  justify-content: space-between;
 }
 
 .callmeback_input_user_name_and_tel {
-  width: 231.36px;
-height: 53px;
-left: 441px;
-top: 1668px;
+  width: 28%;
+height: 25px;
 background: #F9F9F9;
 border: 1px solid rgba(0, 0, 0, 0.1);
 border-radius: 10px;
 font-family: 'Poppins';
 font-style: normal;
 font-weight: 400;
-font-size: 14px;
-line-height: 120%;
+font-size: 10px;
 /* identical to box height, or 17px */
 
 display: flex;
 align-items: center;
 
 color: #929292;
-padding-left: 21px;
+padding-left: 10px;
 }
 
 .callmeback_button {
   cursor: pointer;
-  width: 231.36px;
-height: 53px;
-left: 948.64px;
-top: 1668px;
+  width: 30%;
+height: 30px;
 background: #C60101;
 border-radius: 10px;
 font-family: 'Poppins';
 font-style: normal;
 font-weight: 600;
-font-size: 14px;
+font-size: 10px;
 border: none;
 
 color: #F9F9F9;
@@ -105,4 +106,21 @@ color: #F9F9F9;
 
 .callmeback_button:active {
   background: #740000;
+}
+
+@media screen and (max-width:1024px) {
+  .callmeback_container {
+    margin-top: 0;
+    height: 300px;
+  }
+  .callmeback_secondary_text {
+    margin-top: 0;
+  }
+  .callmeback_inputs_and_button_container {
+    top: 30vh;
+  }
+  .callmeback_input_user_name_and_tel {
+    padding-left: 10px;
+    font-size: 8px;
+  }
 }
