--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,21 +1,42 @@
 .header_container {
-  width: 1200px;
-  height: 83px;
-  padding-left: 360px;
-  padding-right: 360px;
+  width: 100%;
+  height: 60px;
+ /* padding-left: 360px;
+  padding-right: 360px;  */
+  /* padding-left: 20%;
+  padding-right: 20%; */
   display: flex;
+  justify-content: center;
   align-items: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.03);
   background-color: rgb(255, 255, 255);
+  @media screen and (max-width:1024px) {
+    height:40px;
+  }
 }
 
-.header_logo,.logo {
-  width: 152px;
-  height: 63px;
+.header_logo {
+  width: 10%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  width: 100%;
 }
 
 .header_page_nav {
-  margin-left: 201px;
+  /* margin-left: 201px; */
+  /* background-color: rebeccapurple; */
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 30%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .header_nav_btn {
@@ -25,9 +46,9 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 1000;
-  font-size: 14px;
-  width: 82px;
-  height: 17px;
+  font-size: 60%;
+  /* width: 6%; */
+  /* height: 17px; */
   color: #181414;
 }
 
@@ -41,17 +62,17 @@
 
 .header_callback {
   cursor: pointer;
-  width: 141px;
-  height: 43px;
+  width: 10%;
+  height: 50%;
   background: #C60101;
   border-radius: 10px;
   border:none;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 600;
-  font-size: 12px;
+  font-size: 60%;
   line-height: 120%;
-  margin-left: 212px;
+  /* margin-left: 212px; */
   color: #FFFFFF;
 }
 
