--- a/src/components/Body/Certificates/Certificates.css
+++ b/src/components/Body/Certificates/Certificates.css
@@ -1,19 +1,15 @@
 .certificates_container {
   padding-top: 43px;
+  width: 100%;
 }
 
 .cert_desk {
   width: 459px;
 height: 40px;
-left: 360px;
-top: 208px;
-
 font-family: 'Poppins';
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
-line-height: 145%;
-/* or 20px */
 
 display: flex;
 align-items: center;
@@ -29,6 +25,6 @@ color: #181414;
 }
 
 .cert_img {
-  width: 381px;
-height: 544px;
+  width: 30%;
+height: 444px;
 }
