--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,24 @@
 
 .outer_container {
   display: flex;
+  align-items: center;
+  flex-direction: column;
+  background: #E5E5E5;
+  /* background: #000000; */
+}
+
+.header_outer_container {
+  display: flex;
+  background-color:#ffffff;
   justify-content: center;
-  background-color: black;
+  width: 100%;
+}
+
+.footer_outer_container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background: #404040;
 }
 
 .container {
@@ -16,6 +32,9 @@
   flex-direction: column;
   align-items: center;
   width: 1024px;
+  @media screen and (max-width:1024px) {
+    width:100%;
+  }
 }
 
 .modal_background_container {
