--- a/src/components/Body/MainBody/MainBody.css
+++ b/src/components/Body/MainBody/MainBody.css
@@ -1,11 +1,12 @@
 .main_body_container {
-  /* margin-left: 360px;
-  margin-right: 360px; */
   position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  @media screen and (min-width:1024px) {
+    width:1024px;
+  }
 }
 
 /* .main_image {
@@ -24,22 +25,23 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 70%;
+  width: 100%;
   height: 300px;
   background-image: url('../../../images/main_image.jpg');
   background-size: 100%;
-  @media screen and (max-width:1000px) {
-    height:100px;
-  }
+  
 }
+/* @media screen and(max-width:1024px) {
+  
+} */
 
 .primary_text {
-  width: 75%;
+  width:45%;
   height: 30%;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 900;
-  font-size: 23px;
+  font-size: 43px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -91,7 +93,7 @@ margin-top: 2vh;
 
 h2 {
   margin-top: 60px;
-  width: 70%;
+  width: 100%;
 height: 43px;
 
 font-family: 'Poppins';
@@ -111,7 +113,7 @@ color: #181414;
 }
 
 .our_products_container {
-  width: 70%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   margin-bottom: 86px;
@@ -122,7 +124,7 @@ color: #181414;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   width: 23%;
-  height: 290px;
+  height: 340px;
   display: flex;
   flex-direction: column;
   display: flex;
@@ -193,8 +195,7 @@ color: #181414;
 }
 
 .why_we_are_container {
-  width: 70%;
-height: 310px;
+height: 410px;
 left: 360px;
 top: 1840px;
 
@@ -206,6 +207,10 @@ display: flex;
 justify-content: center;
 flex-direction: column;
 align-items: center;
+width: 1024px;
+  @media screen and (max-width:1024px) {
+    width: 100%;
+  }
 }
 
 .wwa_primary_text {
@@ -237,7 +242,7 @@ margin-top: 25px; */
 
 .reason_img {
   display: flex;
-  width: 50%;
+  width: 40%;
   height: 50%;
 
 /* ваы */
@@ -285,7 +290,10 @@ border-radius: 500px;
   justify-content: space-between;
   margin-top: 60px;
   margin-bottom: 60px;
-  width: 70%;
+  width: 1024px;
+  @media screen and (max-width:1024px) {
+    width: 100%;
+  }
 }
 
 .img_and_primary_text {
@@ -385,10 +393,7 @@ border-radius: 10px;
 }
 
 
-@media screen and (max-width:1000px) {
-  .main_image {
-    height: 40vh;
-  }
+@media screen and (max-width:1024px) {
   .primary_text {
     font-size: 4vh;
   }
@@ -399,4 +404,7 @@ border-radius: 10px;
     font-size: 50%;
     height: 5vh;
   }
+  /* .text_for_main_image {
+    height:100px;
+  } */
 }
