--- a/src/components/Body/ProductBody/ProductBody.css
+++ b/src/components/Body/ProductBody/ProductBody.css
@@ -9,27 +9,24 @@
 }
 
 .product_dir {
-  width: 70%;
+  width: 100%;
 height: 17.58px;
-left: 360px;
-top: 126.23px;
 
 font-family: 'Poppins';
 font-style: normal;
 font-weight: 500;
 font-size: 13px;
-line-height: 120%;
 
 color: #A8A8A8;
 }
 
 h1 {
-  width: 70%;
+  width: 100%;
 }
 
 .product_main_img {
-  width: 70%;
-height: 142px;
+  width: 100%;
+/* height: 192px; */
 border-radius: 20px;
 }
 
@@ -52,13 +49,13 @@ color: #181414;
 .pellets_and_briquettes_container {
   display: flex;
   justify-content: space-between;
-  width: 70%;
+  width: 100%;
 }
 
 .pellets_container,.briquettes_container {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 48%;
 }
 
 
@@ -75,6 +72,71 @@ color: #181414;
   margin-top: 34px;
 }
 
+.pellets_and_briquettes_product_card {
+  height: 340px;
+  width: 46%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #FFFFFF;
+border: 1px solid rgba(0, 0, 0, 0.1);
+border-radius: 10px;
+}
+
+.pellets_and_briquettes_product_image {
+  width: 100%;
+}
+
+.pellets_and_briquettes_product_name {
+  margin-top: 10px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 120%;
+  color: #181414;
+  width: 80%;
+}
+
+.pellets_and_briquettes_product_description {
+  font-style: normal;
+font-weight: 500;
+font-size: 11px;
+line-height: 120%;
+width: 80%;
+
+display: flex;
+align-items: center;
+
+color: #181414;
+}
+
+.pellets_and_briquettes_product_price {
+  width: 80%;
+  margin-top: 10px;
+  font-family: 'Poppins';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 120%;
+/* identical to box height, or 29px */
+
+display: flex;
+align-items: center;
+
+color: #181414;
+}
+
+.pellets_and_briquettes_product_show_more_btn {
+  background: #C60101;
+  border-radius: 10px;
+  border: none;
+  color: #FFFFFF;
+  width: 80%;
+  margin-top: 10px;
+  height: 30px;
+}
+
 .product {
   display: flex;
   justify-content: space-between;
@@ -82,7 +144,7 @@ color: #181414;
 }
 
 .boards {
-  width: 1200px;
+  width: 100%;
   height: 29px;
   font-family: 'Poppins';
   font-style: normal;
@@ -93,8 +155,8 @@ color: #181414;
 }
 
 .boards_container {
-  width: 1200px;
-  height: 900px;
+  width: 100%;
+  height: 700px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
