--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;500;600;700;800&display=swap');
+
 #root,html,body,.outer_container {
   width: 100%;
+  min-height: 100%;
   left:0;
   right: 0;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
+
+/* #root,html,body {
+  
+} */
 
 .outer_container {
   display: flex;
   align-items: center;
+  flex-grow: 1;
   flex-direction: column;
   background: #E5E5E5;
   /* background: #000000; */
@@ -30,11 +41,9 @@
   background: #E5E5E5;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   align-items: center;
   width: 1024px;
-  @media screen and (max-width:1024px) {
-    width:100%;
-  }
 }
 
 .modal_background_container {
@@ -152,8 +161,13 @@ border-radius: 10px;
   cursor: pointer;
 }
 
-@media screen and(min-width:1024px) {
+@media screen and (max-width:1024px) {
   .container {
     width: 100%;
   }
 }
+
+/* @font-face {
+  font-family: 'FAMILY_NAME';
+  src: url(../src/Poppins.zip) format('woff2');
+ } */
