--- a/src/components/Body/MainBody/MainBody.css
+++ b/src/components/Body/MainBody/MainBody.css
@@ -26,9 +26,11 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 300px;
+  height: 450px;
   background-image: url('../../../images/main_image.jpg');
   background-size: 100%;
+  background-repeat: no-repeat;
+  object-fit: cover;
   
 }
 /* @media screen and(max-width:1024px) {
@@ -115,16 +117,22 @@ color: #181414;
 .our_products_container {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  column-gap: 25px;
+  row-gap: 20px;
   margin-bottom: 86px;
+  flex-wrap: wrap;
 }
 
 .product_card {
   background: #FFFFFF;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  width: 23%;
-  height: 340px;
+  /* width: 23%; */
+  min-width: 220px;
+  max-width: 230px;
+  flex: 1;
+  height: 370px;
   display: flex;
   flex-direction: column;
   display: flex;
@@ -157,7 +165,8 @@ color: #181414;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
-  font-size: 10px;
+  font-size: 14px;
+  line-height: 100%;
   color: #181414;
   padding-left: 6%;
   padding-right: 6%;
@@ -173,10 +182,10 @@ color: #181414;
   background: #C60101;
   border: none;
   border-radius: 10px;
-  font-family: 'Poppins';
-  font-style: normal;
+  /* font-family: 'Poppins';
+  font-style: normal; */
   font-weight: 600;
-  font-size: 10px;
+  font-size: 13px;
   color: #F9F9F9;
   margin-bottom: 10%;
 }
@@ -208,9 +217,6 @@ justify-content: center;
 flex-direction: column;
 align-items: center;
 width: 1024px;
-  @media screen and (max-width:1024px) {
-    width: 100%;
-  }
 }
 
 .wwa_primary_text {
@@ -261,10 +267,10 @@ border-radius: 500px;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 120%;
   /* or 19px */
-  
+  width: 198px;
   display: flex;
   align-items: center;
   
@@ -277,7 +283,7 @@ border-radius: 500px;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
-  font-size: 10px;
+  font-size: 12px;
   line-height: 120%;
   /* or 16px */
   
@@ -291,9 +297,6 @@ border-radius: 500px;
   margin-top: 60px;
   margin-bottom: 60px;
   width: 1024px;
-  @media screen and (max-width:1024px) {
-    width: 100%;
-  }
 }
 
 .img_and_primary_text {
@@ -339,7 +342,7 @@ height: 583px;
 }
 
 p {
-  font-size: 10px;
+  font-size: 13px;
   width: 100%;
 }
 
@@ -394,8 +397,12 @@ border-radius: 10px;
 
 
 @media screen and (max-width:1024px) {
+  .why_we_are_container {
+    width: 100%;
+  }
   .primary_text {
-    font-size: 4vh;
+    font-size: 20px;
+    height: 100px;
   }
   .secondary_text {
     font-size: 60%;
@@ -404,7 +411,110 @@ border-radius: 10px;
     font-size: 50%;
     height: 5vh;
   }
+  .about_and_delivery_container {
+    width: 100%;
+  }
   /* .text_for_main_image {
     height:100px;
   } */
 }
+
+@media screen and (max-width:720px) {
+  .why_we_are_container {
+    height: 800px;
+    border-radius: 0;
+    padding-top: 20px;
+    justify-content: start;
+  }
+  .reasons {
+    display: flex;
+    justify-content: start;
+    height: 400px;
+  }
+  .reason {
+    width: 100%;
+    height: 100px;
+  }
+  .reason_img {
+    height: 70px;
+    width: 70px;
+  }
+  .reason_text {
+    margin-left: 10px;
+  }
+  .text_for_main_image {
+    height: 400px;
+    background-size: 240%;
+    border-radius: 10px;
+    background-position: 20%;
+  }
+  .primary_text {
+    font-size: 25px;
+    height: 50px;
+    width: 280px;
+  }
+  .secondary_text {
+    font-size: 15px;
+    width: 100%;
+  }
+  .body_image_callback_btn {
+    font-size: 10px;
+    height: 40px;
+    width: 150px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+  .product_name {
+    font-size: 20px;
+  }
+  .img_and_primary_text {
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+  .delivery_img {
+    width: 40px;
+    height: 40px;
+  }
+  .about_us_and_delivery_primary_text {
+    font-size: 20px;
+    height: 40px;
+    margin-left: 10px;
+    width: 130px;
+  }
+  .about_us_and_delivery_text {
+  }
+  p {
+    margin: 0;
+    font-size: 10px;
+  }
+  .delivery {
+    min-height: 650px;
+  }
+  .hr2 {
+    position: absolute;
+  }
+}
+@media screen and (max-width:468px) {
+  .product_card {
+    min-width: 100%;
+    width: 100%;
+    height: 480px;
+  }
+}
+/* 
+@media screen and (max-width:700px) {
+  .our_products_container {
+    width: 700px;
+  }
+}
+
+@media screen and (max-width:450px) {
+  .our_products_container {
+    width: 450px;
+  }
+  
+  .product_card {
+    height: 490px;
+  }
+} */
