--- a/src/components/Body/ProductBody/ProductBody.css
+++ b/src/components/Body/ProductBody/ProductBody.css
@@ -30,13 +30,58 @@ h1 {
 border-radius: 20px;
 }
 
-.product_price {
-  margin-top: 20px;
+.top_boards_product_card {
+  min-width: 235px;
+  width: 23%;
+  margin-left: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #FFFFFF;
+border: 1px solid rgba(0, 0, 0, 0.1);
+border-radius: 10px;
+}
+
+.top_boards_product_image {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 100%;
+}
+
+.top_boards_product_name {
+  width: 80%;
+  margin-top: 10px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  
+  color: #181414;
+}
+
+.top_boards_product_description {
+  width: 80%;
+  margin-top: 10px;
+  line-height: 110%;
+  font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+font-size: 13px;
+display: flex;
+align-items: center;
+
+color: #181414;
+}
+
+.top_boards_product_price {
+  margin-top: 10px;
   width: 80%;
   font-family: 'Poppins';
 font-style: normal;
 font-weight: 700;
-font-size: 24px;
+font-size: 22px;
 line-height: 120%;
 /* identical to box height, or 29px */
 
@@ -46,16 +91,32 @@ align-items: center;
 color: #181414;
 }
 
+.top_boards_product_show_more_btn {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  background: #C60101;
+border-radius: 10px;
+width: 80%;
+height: 30px;
+border: none;
+color: #FFFFFF;
+}
+
 .pellets_and_briquettes_container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  column-gap: 5px;
+  flex-wrap: wrap;
   width: 100%;
 }
 
 .pellets_container,.briquettes_container {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   width: 48%;
+  min-width: 490px;
 }
 
 
@@ -75,6 +136,8 @@ color: #181414;
 .pellets_and_briquettes_product_card {
   height: 340px;
   width: 46%;
+  min-width: 225px;
+  max-width: 225px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -92,7 +155,7 @@ border-radius: 10px;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 120%;
   color: #181414;
   width: 80%;
@@ -141,6 +204,8 @@ color: #181414;
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .boards {
@@ -156,10 +221,12 @@ color: #181414;
 
 .boards_container {
   width: 100%;
-  height: 700px;
+  /* height: 800px; */
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  row-gap: 30px;
+  justify-content: center;
+  align-items:inherit;
 }
 
 .top_boards {
@@ -171,6 +238,6 @@ color: #181414;
 .bottom_boards {
   display: flex;
   margin-top: 20px;
-  width: 890px;
+  width: 70%;
   justify-content: space-between;
 }
