--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,7 @@
   /* padding-left: 20%;
   padding-right: 20%; */
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.03);
   background-color: rgb(255, 255, 255);
@@ -35,7 +35,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  width: 30%;
+  width: 50%;
   margin-left: 10%;
   margin-right: 10%;
 }
@@ -47,7 +47,7 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 1000;
-  font-size: 60%;
+  font-size: 80%;
   /* width: 6%; */
   /* height: 17px; */
   color: #181414;
@@ -68,8 +68,8 @@
   background: #C60101;
   border-radius: 10px;
   border:none;
-  font-family: 'Poppins';
-  font-style: normal;
+  /* font-family: 'Poppins';
+  font-style: normal; */
   font-weight: 600;
   font-size: 60%;
   line-height: 120%;
